--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -32,8 +33,11 @@ body {
     }
 }
 
-#container-header>div:hover{
-    background-color: red;
+
+.ssilka:hover{
+    background-color: yellow;
+    cursor: pointer;
+    
 }
 
 #container-content {
@@ -53,13 +57,13 @@ body {
     flex: 1;
     /*меняет положение блока относительно других*/
     /*	order: 2;*/
-    height: 10px;
+    height: 50px;
 }
 
 #box-2 {
     flex: 3;
     margin-left: 10px;
-    height: 1000px;
+    height: 5000px;
 }
 
 #box-3 {
@@ -80,6 +84,9 @@ body {
 #header-box2 {
     flex: 3;
     margin-left: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 #header-box3 {
@@ -88,7 +95,7 @@ body {
 }
 
 
-#ssilka {
+.ssilka {
     display: flex;
 /*    justify-content: center;*/
     width: 100%;
@@ -119,4 +126,63 @@ h1{
     color:#333;
     font-family:verdana;
     font-size:11px;
+}
+
+#header-box2>div{
+    flex: 1;
+}
+
+/*модальное окно*/
+#modal_form {
+	width: 300px; 
+	height: 300px; /* Рaзмеры дoлжны быть фиксирoвaны */
+	border-radius: 5px;
+	border: 3px #000 solid;
+	background: #fff;
+	position: fixed; /* чтoбы oкнo былo в видимoй зoне в любoм месте */
+	top: 45%; /* oтступaем сверху 45%, oстaльные 5% пoдвинет скрипт */
+	left: 50%; /* пoлoвинa экрaнa слевa */
+	margin-top: -150px;
+	margin-left: -150px; /* тут вся мaгия центрoвки css, oтступaем влевo и вверх минус пoлoвину ширины и высoты сooтветственнo =) */
+	display: none; /* в oбычнoм сoстoянии oкнa не дoлжнo быть */
+	opacity: 0; /* пoлнoстью прoзрaчнo для aнимирoвaния */
+	z-index: 5; /* oкнo дoлжнo быть нaибoлее бoльшем слoе */
+	padding: 20px 10px;
+}
+/* Кнoпкa зaкрыть для тех ктo в тaнке) */
+#modal_form #modal_close {
+	width: 21px;
+	height: 21px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+	display: block;
+}
+/* Пoдлoжкa */
+#overlay {
+	z-index:3; /* пoдлoжкa дoлжнa быть выше слoев элементoв сaйтa, нo ниже слoя мoдaльнoгo oкнa */
+	position:fixed; /* всегдa перекрывaет весь сaйт */
+	background-color:#000; /* чернaя */
+	opacity:0.8; /* нo немнoгo прoзрaчнa */
+	-moz-opacity:0.8; /* фикс прозрачности для старых браузеров */
+	filter:alpha(opacity=80);
+	width:100%; 
+	height:100%; /* рaзмерoм вo весь экрaн */
+	top:0; /* сверху и слевa 0, oбязaтельные свoйствa! */
+	left:0;
+	cursor:pointer;
+	display:none; /* в oбычнoм сoстoянии её нет) */
+}
+#forma-otpravki-dannih {
+    display: flex;
+    flex-direction: column;
+/*    justify-content: center;*/
+    width: 100%;
+    height: 100%;
+/*    если есть распологает ребенка по середине, горизонтально*/
+    justify-content: center;
+/*    если есть то распологает ребенка внтури блока, по центу*/
+    align-items: center;
+    text-align: center;
 }
