--- a/styles/main.css
+++ b/styles/main.css
@@ -317,7 +317,7 @@ img{
 
 .orders {
     display: flex;
-    height: 90px;
+    height: 60px;
 /*    widows: 100%;*/
     flex-direction: row;
     background-color: aqua;
@@ -339,4 +339,43 @@ img{
 }
 .button_click:hover {
     background-color: #FFA500;
+}
+
+#style_of_order {
+    display: flex;
+    flex-direction: row;
+}
+#style_of_order>div>h2{
+    text-align: center;
+}
+#style_of_order>div{
+    padding: 10px;
+    margin: 10px;
+    background-color: aqua;
+}
+
+#all_features {
+    flex: 1;
+}
+
+#add_redactirovanie {
+    flex: 3;
+}
+
+#module_find>form{
+    display: flex;
+    flex-direction: row;
+}
+#module_find>form>input{
+    flex: 3;
+    margin-bottom: 10px;
+}
+#module_find>form>input:last-child{
+    margin-left: 10px;
+    flex: 1;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
 }
