--- a/styles/main.css
+++ b/styles/main.css
@@ -53,7 +53,7 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
     width: 1000px;
-/*    height: 2000px;*/
+    height: 2000px;
 }
 
 .box-styles {
