--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+/*    font-family: 'Roboto', sans-serif;*/
 }
 
 body {
@@ -9,6 +9,8 @@ body {
 /*    margin: auto;*/
 /*    background-color: rgba(69, 71, 74, 0.66);*/
         background-color: white;
+    font-family: 'roboto', sans-serif;
+    font-size: 20px;
 }
 
 /*медиа свойства - адаптивность*/
@@ -18,7 +20,8 @@ body {
         /*распологает блоки в ряд*/
         display: flex;
         flex-direction: row;
-        height: 30px;
+        min-height: 30px;
+        height: auto;
         background-color: #5f5f5f;
         /*обрезает блоки по тексту, прижимает к верху*/
         /*align-items: flex-start;*/
@@ -33,6 +36,20 @@ body {
         /*white-space: nowrap;*/
         /*добавляет многоточие*/
         /*text-overflow: ellipsis;*/
+    }
+}
+@media(max-width: 1080px){
+    .header-logo{
+        position: absolute;
+        visibility: hidden;
+    }
+    #container-header{
+        height: 200px;
+    }
+    #box-3{
+        display: none;
+    }
+  font-size: 100px;
     }
 }
 #container-header>a{
@@ -122,6 +139,7 @@ body {
 /*    если есть то распологает ребенка внтури блока, по центу*/
     align-items: center;
     text-align: center;
+    font-size: 20px;
 }
 
 h1{
@@ -132,7 +150,7 @@ h1{
 #toTop {
     width:100px;
     border:1px solid #ccc;
-    background:#f7f7f7;
+    background:#99ff99;
     text-align:center;
     padding:5px;
     position:fixed;
@@ -143,6 +161,9 @@ h1{
     color:#333;
     font-family:verdana;
     font-size:11px;
+}
+#toTop:hover{
+    background-color: #4CAF50;
 }
 
 #header-box2>div{
@@ -228,6 +249,7 @@ input{
     box-sizing: border-box;
     background-color: #99FF99;
     border: none;
+    font-size: 20px;
 }
 
 input[type=text] { 
@@ -266,6 +288,7 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
 
 label{
     text-align: left;
+    font-size: 20px;
 }
 p{
     text-align: left;
@@ -302,9 +325,12 @@ img{
     margin: 10px;
     padding: 10px;
     text-align: center;
+/*    overfloW: scroll;*/
     overflow: hidden;
 }
-
+.news:hover{
+    overflow: auto;
+}
 .button {
     background-color: yellow;
     background-color: #99ff99;
@@ -396,4 +422,48 @@ img{
 
 .header-menu {
     color: #d9d9d9;
+}
+
+.header-logo {
+    display: flex;
+    height: 100px;
+    font-size: 30px;
+    align-items: flex-end;
+    flex-direction: row;
+    font-family: 'Pacifico', cursive;
+}
+
+#header-logo-left {
+    flex: 1;
+    padding: 10px;
+}
+
+#header-logo-right {
+    flex: 1;
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Pacifico', cursive;
+}
+#header-logo-right>p{
+    text-align: right;
+}
+
+
+
+
+
+.shapka_table {
+    display: flex;
+    flex-direction: row;
+    background-color: aqua;
+    margin-bottom: 10px;
+}
+
+.shapka_table_rebonok {
+    flex: 1;
+    text-align: center;
+}
+
+#header-logo-left-a:hover {
+    color: #99ff99;
 }
